--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "validate-data": "node scripts/validate-data.js"
+    "validate-data": "tsx scripts/validate-data.ts"
   },
   "repository": {
     "type": "git",
@@ -40,6 +40,7 @@
     "eslint": "^9.39.1",
     "eslint-config-next": "^16.0.3",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.18"
+    "tailwindcss": "^3.4.18",
+    "tsx": "^4.20.6"
   }
 }
