--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "validate-data": "tsx scripts/validate-data.ts"
+    "validate-data": "tsx scripts/validate-data.ts",
+    "add-data": "tsx scripts/add-data.ts"
   },
   "repository": {
     "type": "git",
@@ -33,13 +34,18 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@types/leaflet": "^1.9.21",
+    "@types/prompts": "^2.4.9",
     "@types/react-dom": "^19.2.3",
     "@typescript-eslint/eslint-plugin": "^8.47.0",
     "@typescript-eslint/parser": "^8.47.0",
     "autoprefixer": "^10.4.22",
+    "chalk": "^5.6.2",
     "eslint": "^9.39.1",
     "eslint-config-next": "^16.0.3",
+    "google-translate-api-x": "^10.7.2",
+    "ora": "^9.0.0",
     "postcss": "^8.5.6",
+    "prompts": "^2.4.2",
     "tailwindcss": "^3.4.18",
     "tsx": "^4.20.6"
   }
