--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "validate-data": "tsx scripts/validate-data.ts",
@@ -24,6 +25,7 @@
     "clsx": "^2.1.1",
     "leaflet": "^1.9.4",
     "next": "^16.0.3",
+    "next-sitemap": "^4.2.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-leaflet": "^5.0.0",
