--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^19.2.0",
     "react-leaflet": "^5.0.0",
     "react-leaflet-cluster": "^4.0.0",
+    "recharts": "^3.5.0",
     "typescript": "^5.9.3",
     "zod": "^4.1.12"
   },
